{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 1174,
  "lineage": "afe2c965-2324-33ac-f86e-72cd390cf638",
  "resources": [
    {
      "module": "module.eksModule",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_traffic_node_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294182946:security-group-rule/sgr-0fb80599c192c4463",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0fb80599c192c4463",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-070ed55e1145a65f9",
            "security_group_rule_id": "sgr-0fb80599c192c4463",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eksModule.aws_eks_cluster.cluster",
            "module.eksModule.aws_iam_role.eks_cluster_role",
            "module.eksModule.aws_iam_role_policy_attachment.AmazonEKSClusterPolicy",
            "module.eksModule.aws_iam_role_policy_attachment.AmazonEksVPCResourceController",
            "module.vpcModule.aws_subnet.public",
            "module.vpcModule.aws_vpc.main",
            "module.vpcModule.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.pipelineModule",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0069aa073aac75299",
            "arn": "arn:aws:ec2:us-east-1:180294182946:instance/i-0f4711ca30b136c28",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jenkins-ec2-instance-profile",
            "id": "i-0f4711ca30b136c28",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "pipelineKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01644de685e51101d",
            "private_dns": "ip-10-0-2-55.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.55",
            "public_dns": "ec2-54-243-10-249.compute-1.amazonaws.com",
            "public_ip": "54.243.10.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dd9773d3ab159183",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e8cd205803bb31bc",
            "tags": {
              "Name": "jenkins"
            },
            "tags_all": {
              "Name": "jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e35efbcef7a2e73a"
            ]
          },
          "dependencies": [
            "module.pipelineModule.aws_iam_instance_profile.jenkins_ec2_instance_profile",
            "module.pipelineModule.aws_iam_role.jenkins_ec2_role",
            "module.pipelineModule.aws_key_pair.pipeline",
            "module.pipelineModule.data.aws_ami.jenkins",
            "module.vpcModule.aws_security_group.sg",
            "module.vpcModule.aws_subnet.public",
            "module.vpcModule.aws_vpc.main",
            "module.vpcModule.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpcModule",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294182946:internet-gateway/igw-0f92b373205574d60",
            "id": "igw-0f92b373205574d60",
            "owner_id": "180294182946",
            "tags": {
              "Name": "todo-igw"
            },
            "tags_all": {
              "Name": "todo-igw"
            },
            "vpc_id": "vpc-0955fe8e3ba37c97e"
          },
          "dependencies": [
            "module.vpcModule.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcModule",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294182946:route-table/rtb-02cfd54c83e294241",
            "id": "rtb-02cfd54c83e294241",
            "owner_id": "180294182946",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f92b373205574d60",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "todo-public-rt"
            },
            "tags_all": {
              "Name": "todo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0955fe8e3ba37c97e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcModule.aws_internet_gateway.main",
            "module.vpcModule.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpcModule",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba7a212977a27d29",
            "route_table_id": "rtb-02cfd54c83e294241",
            "subnet_id": "subnet-06f4920f635631f7c"
          },
          "dependencies": [
            "module.vpcModule.aws_internet_gateway.main",
            "module.vpcModule.aws_route_table.public",
            "module.vpcModule.aws_subnet.public",
            "module.vpcModule.aws_vpc.main",
            "module.vpcModule.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec63e4dca5b336b8",
            "route_table_id": "rtb-02cfd54c83e294241",
            "subnet_id": "subnet-0ac937741b537739b"
          },
          "dependencies": [
            "module.vpcModule.aws_internet_gateway.main",
            "module.vpcModule.aws_route_table.public",
            "module.vpcModule.aws_subnet.public",
            "module.vpcModule.aws_vpc.main",
            "module.vpcModule.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033e12a9135aa779b",
            "route_table_id": "rtb-02cfd54c83e294241",
            "subnet_id": "subnet-0e8cd205803bb31bc"
          },
          "dependencies": [
            "module.vpcModule.aws_internet_gateway.main",
            "module.vpcModule.aws_route_table.public",
            "module.vpcModule.aws_subnet.public",
            "module.vpcModule.aws_vpc.main",
            "module.vpcModule.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpcModule",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294182946:security-group/sg-0e35efbcef7a2e73a",
            "description": "Allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e35efbcef7a2e73a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "todo-sg",
            "name_prefix": "",
            "owner_id": "180294182946",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "todo-sg"
            },
            "tags_all": {
              "Name": "todo-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0955fe8e3ba37c97e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcModule.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpcModule",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294182946:subnet/subnet-06f4920f635631f7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f4920f635631f7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180294182946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todo-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "todo-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0955fe8e3ba37c97e"
          },
          "dependencies": [
            "module.vpcModule.aws_vpc.main",
            "module.vpcModule.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294182946:subnet/subnet-0ac937741b537739b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac937741b537739b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180294182946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todo-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "todo-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0955fe8e3ba37c97e"
          },
          "dependencies": [
            "module.vpcModule.aws_vpc.main",
            "module.vpcModule.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294182946:subnet/subnet-0e8cd205803bb31bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8cd205803bb31bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180294182946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todo-public-us-east-1c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "todo-public-us-east-1c",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0955fe8e3ba37c97e"
          },
          "dependencies": [
            "module.vpcModule.aws_vpc.main",
            "module.vpcModule.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpcModule",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294182946:vpc/vpc-0955fe8e3ba37c97e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-027795c0e7f928fce",
            "default_route_table_id": "rtb-00a966103e6005d3f",
            "default_security_group_id": "sg-0f7ad86b554718856",
            "dhcp_options_id": "dopt-0a104e634261047ad",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0955fe8e3ba37c97e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00a966103e6005d3f",
            "owner_id": "180294182946",
            "tags": {
              "Name": "todo-vpc"
            },
            "tags_all": {
              "Name": "todo-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpcModule",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294182946:security-group-rule/sgr-09308264605260981",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-09308264605260981",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e35efbcef7a2e73a",
            "security_group_rule_id": "sgr-09308264605260981",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcModule.aws_security_group.sg",
            "module.vpcModule.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpcModule",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294182946:security-group-rule/sgr-0604487a2738ee33a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0604487a2738ee33a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e35efbcef7a2e73a",
            "security_group_rule_id": "sgr-0604487a2738ee33a",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcModule.aws_security_group.sg",
            "module.vpcModule.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}